# CrossPlatformTest

./: .gitignore  CMakeLists.txt  uncrustify.cfg
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: CMakeLists.txt
res/shaders/: default.frag  default.vert
src/: CMakeLists.txt  main.cpp
